service/base/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
        org: umich
        project: officehours
        variant: dev
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/openshift/redis:7
        name: redis
        command: ["redis-server", "--stop-writes-on-bgsave-error", "no", "--save", "\"\""]
        resources: {}
      restartPolicy: Always
status: {}
