service/base/web-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 2
  selector:
    app: web
    org: umich
    project: officehours
    variant: dev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web
        org: umich
        project: officehours
        variant: dev
    spec:
      containers:
      - name: web
        image: image-registry.openshift-image-registry.svc:5000/officehours-dev/officehours:latest
        command: ["python"]
        args: [
          "-m",
          "uvicorn",
          "officehours.asgi:application",
          "--host=0.0.0.0",
          "--port=8001",
          "--forwarded-allow-ips=${FORWARDED_ALLOW_IPS}"  # Will be set via environment variable
        ]
        ports:
        - containerPort: 8001
        resources:
          limits:
            cpu: '1'
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 256Mi
  triggers:
  - type: "ImageChange"
    imageChangeParams:
      automatic: false
      from:
        kind: "ImageStreamTag"
        name: "officehours:latest"
        namespace: "officehours-dev"
      containerNames:
      - "web"
